---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: ????
  Changes:
    - Sort and clean signals on combinator closing
  Features:
    - Add mod setting to keep default Network ID if explicitly set
    - If above setting is enabled, explicitly set default Network ID on build
        Note: If the LTN default network is changed, explicily set combinators will not change automatically.
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2022-1-8
  Bugfixes:
    - Fix a crash in network id encoding pane when cliking Net IDs if the value in the text field
      is not a valid number.
  Features:
    - Setting to make all placed LTN Combinators disabled as they are placed.
      Thanks Nico for the contribution.
  Changes:
    - Display the encoded netowrk ID on the main panel.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2021-11-17
  Bugfixes:
    - Fixed a few missing strings from localization.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-10-20
  Changes:
    - Added depot priority as a managed signal / field.
  Bugfixes:
    - Fix crash due to selecting an invalid signal that the base game does not allow to be filtered.
      https://forums.factorio.com/viewtopic.php?p=554711
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-08-23
  Bugfixes:
    - Fix for multi-player entity overwrite - Thanks Blackclaws
    - Eliminated crash when player joins while other player has LTNC open.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021-08-08
  Changes:
    - Update to work with changes in flib 0.8.0+.  Thanks raiguard for the PR!