@@ -45,7 +45,8 @@ slider-max-items=Request slider maximum stacks (items)
 use-stacks=Request by stacks  
 slider-max-fluid=Request slider maximum (fluid)
 disable-built-combinators=Disable newly built LTN combinators
-emit-default-network-id=Emit explicitly set default Network ID
+emit-default-network-id=Explicit default Network ID
+negative-signals=Requester singnals should be negateive
 
 [mod-setting-description]
 suppress-custom-gui=If an update to LogisticTranNetwork creates conflicts with LTN Combinators, enable this option to use the vanilla GUI for constant combinators.
@@ -57,6 +58,8 @@ slider-max-items=The maximum number of items (stacks) you can request using the 
 use-stacks=If checked, requests for items will be entered as stacks instead of individual count.\n\n[color=blue]Default:[/color] [color=green]True[/color]
 slider-max-fluid=The maximum units of fluid that can be requested using the slider.  You may still enter larger values directly.\n\n[color=blue]Default:[/color] [color=green]500k[/color]
 disable-built-combinators=If enabled, all placed LTN Combinators will be disabled.\n\n[color=blue]Defalut:[/color] [color=green]False[/color]
+emit-default-network-id=When enabled, a Network ID that matches the LTN default Network ID will not be removed from the combinator.\n\n[color=blue]Default:[/color] [color=green]False[/color]
+negative-signals=When enabled and the combinator is set as a requester, newly created 'Item' and 'Fluid' signals will be made negative.\n\n[color=blue]Default:[/color] [color=green]True[/color]
 [string-mod-setting]
 provide-type-only-item-count=Normal thresholds only
 provide-type-both-item-stack=Normal and Stack thresholds
